feat: update yml file and fix build error with old package

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -23,7 +23,7 @@ jobs:
         run: npm run build
 
       - name: Run tests # Step 4: Run automated tests to ensure code quality
-        run: npm test
+        run: npm run test -- --watchAll
 
       - name: Deploy to Vercel # Step 5: Deploy the app to Vercel in production mode
         env:
